// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AudioButton Default 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <button
    className="sc-bdvvtL fZQeXN"
    onClick={[Function]}
  />
  <audio
    autoPlay={false}
    src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-13.mp3"
  />
</div>
`;

exports[`Storyshots AudioButton Playing 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <button
    className="sc-bdvvtL fZQeXN"
    onClick={[Function]}
  />
  <audio
    autoPlay={false}
    src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-13.mp3"
  />
</div>
`;

exports[`Storyshots Button Default 1`] = `
<button
  className="sc-dkPtRN doeNQV"
  data-large={false}
  onClick={[Function]}
>
  按鈕
</button>
`;

exports[`Storyshots Button Primary 1`] = `
<button
  className="sc-dkPtRN doeNQV"
  data-large={false}
  onClick={[Function]}
>
  按鈕
</button>
`;

exports[`Storyshots Button Primary Outline 1`] = `
<button
  className="sc-dkPtRN erzFDq"
  data-large={false}
  onClick={[Function]}
>
  按鈕
</button>
`;

exports[`Storyshots Button Secondary 1`] = `
<button
  className="sc-dkPtRN bvmbqx"
  data-large={false}
  onClick={[Function]}
>
  按鈕
</button>
`;

exports[`Storyshots Button Secondary Outline 1`] = `
<button
  className="sc-dkPtRN fPUQHW"
  data-large={false}
  onClick={[Function]}
>
  按鈕
</button>
`;

exports[`Storyshots CompleteButton Default 1`] = `
<button
  className="sc-eCImPb CimIN"
>
  TASK COMPLETED
</button>
`;

exports[`Storyshots CountPanel Default 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    className="sc-furwcr fYIddm"
  >
    <div
      className="sc-jRQBWg jCCcHD"
    >
      <p
        className="sc-gKclnd fxvncB"
      >
        0
      </p>
      <p
        className="sc-iCfMLu ceNQhQ"
      >
        TODAY
      </p>
    </div>
    <div
      className="sc-jRQBWg jCCcHD"
    >
      <p
        className="sc-gKclnd fxvncB"
      >
        0
      </p>
      <p
        className="sc-iCfMLu ceNQhQ"
      >
        2/13 - 2/19
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots CountPanelItem Default 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    className="sc-jRQBWg jCCcHD"
  >
    <p
      className="sc-gKclnd fxvncB"
    >
      0
    </p>
    <p
      className="sc-iCfMLu ceNQhQ"
    >
      TODAY
    </p>
  </div>
</div>
`;

exports[`Storyshots DateCountItem Default 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
>
  <div
    className="sc-crHmcD hGvKfC"
  >
    <div
      className="sc-jrQzAO gIhMrF"
    >
      <p
        className="sc-kDTinF dOXFGf"
      >
        5
      </p>
      <div
        className="sc-pVTFL iCgeqA"
      />
      <div
        className="sc-pVTFL iCgeqA"
      />
      <div
        className="sc-pVTFL iCgeqA"
      />
      <div
        className="sc-pVTFL iCgeqA"
      />
      <div
        className="sc-pVTFL iCgeqA"
      />
    </div>
    <div
      className="sc-iqseJM"
    >
      <p
        className="sc-iCfMLu ceNQhQ"
      >
        2/14
      </p>
      <p
        className="sc-iCfMLu ceNQhQ"
      >
        MON
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots DateCountItem No Tomato 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
>
  <div
    className="sc-crHmcD hGvKfC"
  >
    <div
      className="sc-jrQzAO gIhMrF"
    />
    <div
      className="sc-iqseJM"
    >
      <p
        className="sc-iCfMLu ceNQhQ"
      >
        2/14
      </p>
      <p
        className="sc-iCfMLu ceNQhQ"
      >
        MON
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots DateCountPanel Default 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    className="sc-egiyK lfayKR"
  >
    <div
      className="sc-crHmcD hGvKfC"
    >
      <div
        className="sc-jrQzAO gIhMrF"
      />
      <div
        className="sc-iqseJM"
      >
        <p
          className="sc-iCfMLu ceNQhQ"
        >
          2/13
        </p>
        <p
          className="sc-iCfMLu ceNQhQ"
        >
          SUN
        </p>
      </div>
    </div>
    <div
      className="sc-crHmcD hGvKfC"
    >
      <div
        className="sc-jrQzAO gIhMrF"
      >
        <p
          className="sc-kDTinF dOXFGf"
        >
          1
        </p>
        <div
          className="sc-pVTFL iCgeqA"
        />
      </div>
      <div
        className="sc-iqseJM"
      >
        <p
          className="sc-iCfMLu ceNQhQ"
        >
          2/14
        </p>
        <p
          className="sc-iCfMLu ceNQhQ"
        >
          MON
        </p>
      </div>
    </div>
    <div
      className="sc-crHmcD hGvKfC"
    >
      <div
        className="sc-jrQzAO gIhMrF"
      >
        <p
          className="sc-kDTinF dOXFGf"
        >
          2
        </p>
        <div
          className="sc-pVTFL iCgeqA"
        />
        <div
          className="sc-pVTFL iCgeqA"
        />
      </div>
      <div
        className="sc-iqseJM"
      >
        <p
          className="sc-iCfMLu ceNQhQ"
        >
          2/15
        </p>
        <p
          className="sc-iCfMLu ceNQhQ"
        >
          TUE
        </p>
      </div>
    </div>
    <div
      className="sc-crHmcD hGvKfC"
    >
      <div
        className="sc-jrQzAO gIhMrF"
      >
        <p
          className="sc-kDTinF dOXFGf"
        >
          3
        </p>
        <div
          className="sc-pVTFL iCgeqA"
        />
        <div
          className="sc-pVTFL iCgeqA"
        />
        <div
          className="sc-pVTFL iCgeqA"
        />
      </div>
      <div
        className="sc-iqseJM"
      >
        <p
          className="sc-iCfMLu ceNQhQ"
        >
          2/16
        </p>
        <p
          className="sc-iCfMLu ceNQhQ"
        >
          WED
        </p>
      </div>
    </div>
    <div
      className="sc-crHmcD hGvKfC"
    >
      <div
        className="sc-jrQzAO gIhMrF"
      >
        <p
          className="sc-kDTinF dOXFGf"
        >
          4
        </p>
        <div
          className="sc-pVTFL iCgeqA"
        />
        <div
          className="sc-pVTFL iCgeqA"
        />
        <div
          className="sc-pVTFL iCgeqA"
        />
        <div
          className="sc-pVTFL iCgeqA"
        />
      </div>
      <div
        className="sc-iqseJM"
      >
        <p
          className="sc-iCfMLu ceNQhQ"
        >
          2/17
        </p>
        <p
          className="sc-iCfMLu ceNQhQ"
        >
          THU
        </p>
      </div>
    </div>
    <div
      className="sc-crHmcD hGvKfC"
    >
      <div
        className="sc-jrQzAO gIhMrF"
      >
        <p
          className="sc-kDTinF dOXFGf"
        >
          5
        </p>
        <div
          className="sc-pVTFL iCgeqA"
        />
        <div
          className="sc-pVTFL iCgeqA"
        />
        <div
          className="sc-pVTFL iCgeqA"
        />
        <div
          className="sc-pVTFL iCgeqA"
        />
        <div
          className="sc-pVTFL iCgeqA"
        />
      </div>
      <div
        className="sc-iqseJM"
      >
        <p
          className="sc-iCfMLu ceNQhQ"
        >
          2/18
        </p>
        <p
          className="sc-iCfMLu ceNQhQ"
        >
          FRI
        </p>
      </div>
    </div>
    <div
      className="sc-crHmcD hGvKfC"
    >
      <div
        className="sc-jrQzAO gIhMrF"
      >
        <p
          className="sc-kDTinF dOXFGf"
        >
          6
        </p>
        <div
          className="sc-pVTFL iCgeqA"
        />
        <div
          className="sc-pVTFL iCgeqA"
        />
        <div
          className="sc-pVTFL iCgeqA"
        />
        <div
          className="sc-pVTFL iCgeqA"
        />
        <div
          className="sc-pVTFL iCgeqA"
        />
        <div
          className="sc-pVTFL iCgeqA"
        />
      </div>
      <div
        className="sc-iqseJM"
      >
        <p
          className="sc-iCfMLu ceNQhQ"
        >
          2/19
        </p>
        <p
          className="sc-iCfMLu ceNQhQ"
        >
          SAT
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Label Default 1`] = `
<label
  className="sc-bqiRlB eVnNFY"
>
  TEST
</label>
`;

exports[`Storyshots Panel Ringtone 1`] = `
<div
  className="sc-bkkeKt fjtyXm"
>
  <div
    className="sc-hBUSln iCqXKt"
  >
    <button
      className="sc-ksdxgE kseVvl"
      onClick={[Function]}
    >
      WORK
    </button>
    <button
      className="sc-ksdxgE hMLkiG"
      onClick={[Function]}
    >
      BREAK
    </button>
  </div>
  <ul
    className="sc-fFeiMQ bOXpIy"
  >
    <li
      className="sc-fotOHu lcROZv"
    >
      <div
        className="sc-hGPBjI byVhgN"
      >
        <div
          className="sc-dlVxhl kBSMjP"
          onClick={[Function]}
        >
          <div
            className="sc-bBHxTw FaaXA"
          >
            <div
              className="sc-ieecCq hfWroR"
            />
          </div>
          <p
            className="sc-kfPuZi eujSvS"
            style={
              Object {
                "marginBottom": 0,
              }
            }
          >
            test1
          </p>
        </div>
        <div
          className="sc-fKVqWL iOVGBz"
        >
          <button
            className="sc-bdvvtL fZQeXN"
            onClick={[Function]}
          />
          <audio
            autoPlay={false}
            src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"
          />
        </div>
      </div>
    </li>
    <li
      className="sc-fotOHu lcROZv"
    >
      <div
        className="sc-hGPBjI byVhgN"
      >
        <div
          className="sc-dlVxhl kBSMjP"
          onClick={[Function]}
        >
          <div
            className="sc-bBHxTw FaaXA"
          >
            <div
              className="sc-ieecCq hfWroR"
            />
          </div>
          <p
            className="sc-kfPuZi eujSvS"
            style={
              Object {
                "marginBottom": 0,
              }
            }
          >
            test2
          </p>
        </div>
        <div
          className="sc-fKVqWL iOVGBz"
        >
          <button
            className="sc-bdvvtL fZQeXN"
            onClick={[Function]}
          />
          <audio
            autoPlay={false}
            src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-2.mp3"
          />
        </div>
      </div>
    </li>
    <li
      className="sc-fotOHu lcROZv"
    >
      <div
        className="sc-hGPBjI byVhgN"
      >
        <div
          className="sc-dlVxhl kBSMjP"
          onClick={[Function]}
        >
          <div
            className="sc-bBHxTw FaaXA"
          >
            <div
              className="sc-ieecCq hfWroR"
            />
          </div>
          <p
            className="sc-kfPuZi eujSvS"
            style={
              Object {
                "marginBottom": 0,
              }
            }
          >
            test3
          </p>
        </div>
        <div
          className="sc-fKVqWL iOVGBz"
        >
          <button
            className="sc-bdvvtL fZQeXN"
            onClick={[Function]}
          />
          <audio
            autoPlay={false}
            src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-3.mp3"
          />
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Panel Task 1`] = `
<div
  className="sc-bkkeKt fjtyXm"
>
  <div
    className="sc-hBUSln iCqXKt"
  >
    <button
      className="sc-ksdxgE kseVvl"
      onClick={[Function]}
    >
      TO DO
    </button>
    <button
      className="sc-ksdxgE hMLkiG"
      onClick={[Function]}
    >
      DONE
    </button>
  </div>
  <ul
    className="sc-fFeiMQ bOXpIy"
  >
    <li
      className="sc-fotOHu lcROZv"
    >
      <div
        className="sc-kLwhqv dGsTDE"
      >
        <div
          className="sc-hGPBjI byVhgN"
        >
          <div
            className="sc-dlVxhl kBSMjP"
          >
            <div>
              <p
                className="sc-kfPuZi eujSvS"
              >
                todo 1
              </p>
              <div
                className="sc-dJjYzT iUWYYH"
              >
                <div
                  className="sc-ieecCq hfWroR"
                />
                <div
                  className="sc-ieecCq hfWroR"
                />
                <div
                  className="sc-ieecCq hfWroR"
                />
                <div
                  className="sc-ieecCq hfWroR"
                />
                <div
                  className="sc-ieecCq hfWroR"
                />
              </div>
            </div>
          </div>
          <div
            className="sc-fKVqWL iOVGBz"
          >
            <button
              className="sc-iwjdpV sc-llYSUQ jidcoG ghFAOA"
              onClick={[Function]}
            >
              ...
            </button>
          </div>
        </div>
      </div>
    </li>
    <li
      className="sc-fotOHu lcROZv"
    >
      <div
        className="sc-kLwhqv dGsTDE"
      >
        <div
          className="sc-hGPBjI byVhgN"
        >
          <div
            className="sc-dlVxhl kBSMjP"
          >
            <div>
              <p
                className="sc-kfPuZi eujSvS"
              >
                todo 2
              </p>
              <div
                className="sc-dJjYzT iUWYYH"
              >
                <div
                  className="sc-ieecCq hfWroR"
                />
                <div
                  className="sc-ieecCq hfWroR"
                />
                <div
                  className="sc-ieecCq hfWroR"
                />
                <div
                  className="sc-ieecCq hfWroR"
                />
                <div
                  className="sc-ieecCq hfWroR"
                />
              </div>
            </div>
          </div>
          <div
            className="sc-fKVqWL iOVGBz"
          >
            <button
              className="sc-iwjdpV sc-llYSUQ jidcoG ghFAOA"
              onClick={[Function]}
            >
              ...
            </button>
          </div>
        </div>
      </div>
    </li>
    <li
      className="sc-fotOHu lcROZv"
    >
      <div
        className="sc-kLwhqv dGsTDE"
      >
        <div
          className="sc-hGPBjI byVhgN"
        >
          <div
            className="sc-dlVxhl kBSMjP"
          >
            <div>
              <p
                className="sc-kfPuZi eujSvS"
              >
                todo 3
              </p>
              <div
                className="sc-dJjYzT iUWYYH"
              >
                <div
                  className="sc-ieecCq hfWroR"
                />
                <div
                  className="sc-ieecCq hfWroR"
                />
                <div
                  className="sc-ieecCq hfWroR"
                />
                <div
                  className="sc-ieecCq hfWroR"
                />
                <div
                  className="sc-ieecCq hfWroR"
                />
              </div>
            </div>
          </div>
          <div
            className="sc-fKVqWL iOVGBz"
          >
            <button
              className="sc-iwjdpV sc-llYSUQ jidcoG ghFAOA"
              onClick={[Function]}
            >
              ...
            </button>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots PanelItem Default 1`] = `
<li
  className="sc-fotOHu lcROZv"
>
  <h3>
    Hello World
  </h3>
</li>
`;

exports[`Storyshots PanelList Default 1`] = `
<ul
  className="sc-fFeiMQ bOXpIy"
>
  <li
    className="sc-fotOHu lcROZv"
  >
    1
  </li>
  <li
    className="sc-fotOHu lcROZv"
  >
    2
  </li>
  <li
    className="sc-fotOHu lcROZv"
  >
    3
  </li>
</ul>
`;

exports[`Storyshots Pie Children 1`] = `
<div
  className="sc-ikJyIC kWjumI"
  color="#ea5548"
>
  <div
    className="sc-jJoQJp kQedQS"
    color="#ea5548"
  />
  <div
    className="sc-hiCibw gpboPv"
  >
    <p
      style={
        Object {
          "margin": "0",
        }
      }
    >
      children
    </p>
  </div>
</div>
`;

exports[`Storyshots Pie Default 1`] = `
<div
  className="sc-ikJyIC kWjumI"
  color="#ea5548"
>
  <div
    className="sc-jJoQJp jHXrVy"
    color="#ea5548"
  />
  <div
    className="sc-hiCibw gpboPv"
  />
</div>
`;

exports[`Storyshots Record Completed 1`] = `
<div
  className="sc-ieecCq TxhAg"
/>
`;

exports[`Storyshots Record Default 1`] = `
<div
  className="sc-ieecCq hfWroR"
/>
`;

exports[`Storyshots RecordGroup Default 1`] = `
<div
  className="sc-dJjYzT iUWYYH"
>
  <div
    className="sc-ieecCq hfWroR"
  />
  <div
    className="sc-ieecCq hfWroR"
  />
  <div
    className="sc-ieecCq hfWroR"
  />
  <div
    className="sc-ieecCq hfWroR"
  />
  <div
    className="sc-ieecCq hfWroR"
  />
</div>
`;

exports[`Storyshots RingtoneItem Default 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
>
  <div
    className="sc-hGPBjI byVhgN"
  >
    <div
      className="sc-dlVxhl kBSMjP"
      onClick={[Function]}
    >
      <div
        className="sc-bBHxTw FaaXA"
      >
        <div
          className="sc-ieecCq hfWroR"
        />
      </div>
      <p
        className="sc-kfPuZi eujSvS"
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        test
      </p>
    </div>
    <div
      className="sc-fKVqWL iOVGBz"
    >
      <button
        className="sc-bdvvtL fZQeXN"
        onClick={[Function]}
      />
      <audio
        autoPlay={false}
        src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-13.mp3"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots RingtonePanelList Default 1`] = `
<ul
  className="sc-fFeiMQ bOXpIy"
>
  <li
    className="sc-fotOHu lcROZv"
  >
    <div
      className="sc-hGPBjI byVhgN"
    >
      <div
        className="sc-dlVxhl kBSMjP"
        onClick={[Function]}
      >
        <div
          className="sc-bBHxTw FaaXA"
        >
          <div
            className="sc-ieecCq hfWroR"
          />
        </div>
        <p
          className="sc-kfPuZi eujSvS"
          style={
            Object {
              "marginBottom": 0,
            }
          }
        >
          test1
        </p>
      </div>
      <div
        className="sc-fKVqWL iOVGBz"
      >
        <button
          className="sc-bdvvtL fZQeXN"
          onClick={[Function]}
        />
        <audio
          autoPlay={false}
          src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"
        />
      </div>
    </div>
  </li>
  <li
    className="sc-fotOHu lcROZv"
  >
    <div
      className="sc-hGPBjI byVhgN"
    >
      <div
        className="sc-dlVxhl kBSMjP"
        onClick={[Function]}
      >
        <div
          className="sc-bBHxTw FaaXA"
        >
          <div
            className="sc-ieecCq hfWroR"
          />
        </div>
        <p
          className="sc-kfPuZi eujSvS"
          style={
            Object {
              "marginBottom": 0,
            }
          }
        >
          test2
        </p>
      </div>
      <div
        className="sc-fKVqWL iOVGBz"
      >
        <button
          className="sc-bdvvtL fZQeXN"
          onClick={[Function]}
        />
        <audio
          autoPlay={false}
          src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-2.mp3"
        />
      </div>
    </div>
  </li>
  <li
    className="sc-fotOHu lcROZv"
  >
    <div
      className="sc-hGPBjI byVhgN"
    >
      <div
        className="sc-dlVxhl kBSMjP"
        onClick={[Function]}
      >
        <div
          className="sc-bBHxTw FaaXA"
        >
          <div
            className="sc-ieecCq hfWroR"
          />
        </div>
        <p
          className="sc-kfPuZi eujSvS"
          style={
            Object {
              "marginBottom": 0,
            }
          }
        >
          test3
        </p>
      </div>
      <div
        className="sc-fKVqWL iOVGBz"
      >
        <button
          className="sc-bdvvtL fZQeXN"
          onClick={[Function]}
        />
        <audio
          autoPlay={false}
          src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-3.mp3"
        />
      </div>
    </div>
  </li>
</ul>
`;

exports[`Storyshots Tab Active 1`] = `
<button
  className="sc-ksdxgE kseVvl"
  onClick={[Function]}
>
  TEST
</button>
`;

exports[`Storyshots Tab Default 1`] = `
<button
  className="sc-ksdxgE hMLkiG"
  onClick={[Function]}
>
  
</button>
`;

exports[`Storyshots Tab Wording 1`] = `
<button
  className="sc-ksdxgE hMLkiG"
  onClick={[Function]}
>
  TEST
</button>
`;

exports[`Storyshots TaskItem Default 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="sc-kLwhqv dGsTDE"
  >
    <div
      className="sc-hGPBjI byVhgN"
    >
      <div
        className="sc-dlVxhl kBSMjP"
      >
        <div>
          <p
            className="sc-kfPuZi eujSvS"
          >
            test
          </p>
          <div
            className="sc-dJjYzT iUWYYH"
          >
            <div
              className="sc-ieecCq hfWroR"
            />
            <div
              className="sc-ieecCq hfWroR"
            />
            <div
              className="sc-ieecCq hfWroR"
            />
            <div
              className="sc-ieecCq hfWroR"
            />
            <div
              className="sc-ieecCq hfWroR"
            />
          </div>
        </div>
      </div>
      <div
        className="sc-fKVqWL iOVGBz"
      >
        <button
          className="sc-iwjdpV sc-llYSUQ jidcoG ghFAOA"
          onClick={[Function]}
        >
          ...
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskItem Done 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="sc-kLwhqv dGsTDE"
  >
    <div
      className="sc-hGPBjI byVhgN"
    >
      <div
        className="sc-dlVxhl kBSMjP"
      >
        <div
          className="sc-bBHxTw FaaXA"
        >
          <img
            alt=""
            src="complete.svg"
          />
        </div>
        <div>
          <p
            className="sc-kfPuZi eujSvS"
          >
            test
          </p>
          <div
            className="sc-dJjYzT iUWYYH"
          >
            <div
              className="sc-ieecCq hfWroR"
            />
            <div
              className="sc-ieecCq hfWroR"
            />
            <div
              className="sc-ieecCq hfWroR"
            />
            <div
              className="sc-ieecCq hfWroR"
            />
            <div
              className="sc-ieecCq hfWroR"
            />
          </div>
        </div>
      </div>
      <div
        className="sc-fKVqWL iOVGBz"
      >
        <button
          className="sc-iwjdpV sc-llYSUQ jidcoG ghFAOA"
          onClick={[Function]}
        >
          ...
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskItem Opened 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="sc-kLwhqv dGsTDE"
  >
    <div
      className="sc-hGPBjI byVhgN"
    >
      <div
        className="sc-dlVxhl kBSMjP"
      >
        <div>
          <p
            className="sc-kfPuZi eujSvS"
          >
            test
          </p>
          <div
            className="sc-dJjYzT iUWYYH"
          >
            <div
              className="sc-ieecCq hfWroR"
            />
            <div
              className="sc-ieecCq hfWroR"
            />
            <div
              className="sc-ieecCq hfWroR"
            />
            <div
              className="sc-ieecCq hfWroR"
            />
            <div
              className="sc-ieecCq hfWroR"
            />
          </div>
        </div>
      </div>
      <div
        className="sc-fKVqWL iOVGBz"
      >
        <button
          className="sc-iwjdpV sc-llYSUQ jidcoG kYUUiJ"
          onClick={[Function]}
        >
          ...
        </button>
      </div>
    </div>
    <hr />
    <div
      className="sc-bYoBSM hCMUdX"
    >
      <div>
        <label
          className="sc-bqiRlB eVnNFY"
        >
          TASK TITLE
        </label>
        <input
          className="sc-iJKOTD kXsipC"
          onChange={[Function]}
          type="text"
          value="test"
        />
      </div>
      <div>
        <label
          className="sc-bqiRlB eVnNFY"
        >
          ESTIMATED TOMATO
        </label>
        <div
          className="sc-ezbkAF kGzYjU"
          onClick={[Function]}
        >
          <button
            className="sc-giYglK ljthfC"
            data-number={1}
          />
          <button
            className="sc-giYglK ljthfC"
            data-number={2}
          />
          <button
            className="sc-giYglK ljthfC"
            data-number={3}
          />
          <button
            className="sc-giYglK ljthfC"
            data-number={4}
          />
          <button
            className="sc-giYglK ljthfC"
            data-number={5}
          />
          <button
            className="sc-giYglK ljthfC"
            data-number={6}
          />
          <button
            className="sc-giYglK ljthfC"
            data-number={7}
          />
          <button
            className="sc-giYglK ljthfC"
            data-number={8}
          />
          <button
            className="sc-giYglK ljthfC"
            data-number={9}
          />
          <button
            className="sc-giYglK ljthfC"
            data-number={10}
          />
        </div>
      </div>
      <div
        className="sc-hKwDye faWgkr"
      >
        <button
          className="sc-dkPtRN bvmbqx"
          data-large={false}
          onClick={[Function]}
        >
          DELETE
        </button>
        <button
          className="sc-dkPtRN doeNQV"
          data-large={true}
          onClick={[Function]}
        >
          SAVE
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskItemOperate/DoneTask Default 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="sc-bYoBSM hCMUdX"
  >
    <div
      className="sc-hKwDye faWgkr"
    >
      <button
        className="sc-dkPtRN bvmbqx"
        data-large={false}
        onClick={[Function]}
      >
        DELETE
      </button>
      <button
        className="sc-dkPtRN doeNQV"
        data-large={true}
        onClick={[Function]}
      >
        REDO
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskItemOperate/TodoTask Default 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="sc-bYoBSM hCMUdX"
  >
    <div>
      <label
        className="sc-bqiRlB eVnNFY"
      >
        TASK TITLE
      </label>
      <input
        className="sc-iJKOTD kXsipC"
        onChange={[Function]}
        type="text"
        value="test"
      />
    </div>
    <div>
      <label
        className="sc-bqiRlB eVnNFY"
      >
        ESTIMATED TOMATO
      </label>
      <div
        className="sc-ezbkAF kGzYjU"
        onClick={[Function]}
      >
        <button
          className="sc-giYglK ljthfC"
          data-number={1}
        />
        <button
          className="sc-giYglK ljthfC"
          data-number={2}
        />
        <button
          className="sc-giYglK ljthfC"
          data-number={3}
        />
        <button
          className="sc-giYglK ljthfC"
          data-number={4}
        />
        <button
          className="sc-giYglK ljthfC"
          data-number={5}
        />
        <button
          className="sc-giYglK ljthfC"
          data-number={6}
        />
        <button
          className="sc-giYglK ljthfC"
          data-number={7}
        />
        <button
          className="sc-giYglK ljthfC"
          data-number={8}
        />
        <button
          className="sc-giYglK ljthfC"
          data-number={9}
        />
        <button
          className="sc-giYglK ljthfC"
          data-number={10}
        />
      </div>
    </div>
    <div
      className="sc-hKwDye faWgkr"
    >
      <button
        className="sc-dkPtRN bvmbqx"
        data-large={false}
        onClick={[Function]}
      >
        DELETE
      </button>
      <button
        className="sc-dkPtRN doeNQV"
        data-large={true}
        onClick={[Function]}
      >
        SAVE
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskItemTitle Default 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
>
  <div
    className="sc-hGPBjI byVhgN"
  >
    <div
      className="sc-dlVxhl kBSMjP"
    >
      <div>
        <p
          className="sc-kfPuZi eujSvS"
        >
          test
        </p>
        <div
          className="sc-dJjYzT iUWYYH"
        >
          <div
            className="sc-ieecCq hfWroR"
          />
          <div
            className="sc-ieecCq hfWroR"
          />
          <div
            className="sc-ieecCq hfWroR"
          />
          <div
            className="sc-ieecCq hfWroR"
          />
          <div
            className="sc-ieecCq hfWroR"
          />
        </div>
      </div>
    </div>
    <div
      className="sc-fKVqWL iOVGBz"
    >
      <button
        className="sc-iwjdpV sc-llYSUQ jidcoG ghFAOA"
        onClick={[Function]}
      >
        ...
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskItemTitle Done 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
>
  <div
    className="sc-hGPBjI byVhgN"
  >
    <div
      className="sc-dlVxhl kBSMjP"
    >
      <div
        className="sc-bBHxTw FaaXA"
      >
        <img
          alt=""
          src="complete.svg"
        />
      </div>
      <div>
        <p
          className="sc-kfPuZi eujSvS"
        >
          test
        </p>
        <div
          className="sc-dJjYzT iUWYYH"
        >
          <div
            className="sc-ieecCq hfWroR"
          />
          <div
            className="sc-ieecCq hfWroR"
          />
          <div
            className="sc-ieecCq hfWroR"
          />
          <div
            className="sc-ieecCq hfWroR"
          />
          <div
            className="sc-ieecCq hfWroR"
          />
        </div>
      </div>
    </div>
    <div
      className="sc-fKVqWL iOVGBz"
    >
      <button
        className="sc-iwjdpV sc-llYSUQ jidcoG ghFAOA"
        onClick={[Function]}
      >
        ...
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskPanelList Default 1`] = `
<ul
  className="sc-fFeiMQ bOXpIy"
>
  <li
    className="sc-fotOHu lcROZv"
  >
    <div
      className="sc-kLwhqv dGsTDE"
    >
      <div
        className="sc-hGPBjI byVhgN"
      >
        <div
          className="sc-dlVxhl kBSMjP"
        >
          <div>
            <p
              className="sc-kfPuZi eujSvS"
            >
              test1
            </p>
            <div
              className="sc-dJjYzT iUWYYH"
            >
              <div
                className="sc-ieecCq TxhAg"
              />
              <div
                className="sc-ieecCq TxhAg"
              />
              <div
                className="sc-ieecCq hfWroR"
              />
              <div
                className="sc-ieecCq hfWroR"
              />
              <div
                className="sc-ieecCq hfWroR"
              />
            </div>
          </div>
        </div>
        <div
          className="sc-fKVqWL iOVGBz"
        >
          <button
            className="sc-iwjdpV sc-llYSUQ jidcoG ghFAOA"
            onClick={[Function]}
          >
            ...
          </button>
        </div>
      </div>
    </div>
  </li>
  <li
    className="sc-fotOHu lcROZv"
  >
    <div
      className="sc-kLwhqv dGsTDE"
    >
      <div
        className="sc-hGPBjI byVhgN"
      >
        <div
          className="sc-dlVxhl kBSMjP"
        >
          <div>
            <p
              className="sc-kfPuZi eujSvS"
            >
              test2
            </p>
            <div
              className="sc-dJjYzT iUWYYH"
            >
              <div
                className="sc-ieecCq hfWroR"
              />
              <div
                className="sc-ieecCq hfWroR"
              />
              <div
                className="sc-ieecCq hfWroR"
              />
              <div
                className="sc-ieecCq hfWroR"
              />
              <div
                className="sc-ieecCq hfWroR"
              />
              <div
                className="sc-ieecCq hfWroR"
              />
            </div>
          </div>
        </div>
        <div
          className="sc-fKVqWL iOVGBz"
        >
          <button
            className="sc-iwjdpV sc-llYSUQ jidcoG ghFAOA"
            onClick={[Function]}
          >
            ...
          </button>
        </div>
      </div>
    </div>
  </li>
  <li
    className="sc-fotOHu lcROZv"
  >
    <div
      className="sc-kLwhqv dGsTDE"
    >
      <div
        className="sc-hGPBjI byVhgN"
      >
        <div
          className="sc-dlVxhl kBSMjP"
        >
          <div>
            <p
              className="sc-kfPuZi eujSvS"
            >
              test3
            </p>
            <div
              className="sc-dJjYzT iUWYYH"
            >
              <div
                className="sc-ieecCq hfWroR"
              />
              <div
                className="sc-ieecCq hfWroR"
              />
              <div
                className="sc-ieecCq hfWroR"
              />
            </div>
          </div>
        </div>
        <div
          className="sc-fKVqWL iOVGBz"
        >
          <button
            className="sc-iwjdpV sc-llYSUQ jidcoG ghFAOA"
            onClick={[Function]}
          >
            ...
          </button>
        </div>
      </div>
    </div>
  </li>
</ul>
`;

exports[`Storyshots TextInput Default 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <input
    className="sc-iJKOTD kXsipC"
    onChange={[Function]}
    type="text"
    value=""
  />
</div>
`;

exports[`Storyshots TextInput Password 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <input
    className="sc-iJKOTD kXsipC"
    onChange={[Function]}
    type="password"
    value=""
  />
</div>
`;

exports[`Storyshots Timer Default 1`] = `
<div
  className="sc-gWXbKe"
>
  00:00
</div>
`;

exports[`Storyshots TimerPie Default 1`] = `
<div
  className="sc-ikJyIC kWjumI"
  color="#ea5548"
>
  <div
    className="sc-jJoQJp ffDhM"
    color="#ea5548"
  />
  <div
    className="sc-hiCibw gpboPv"
  >
    <div
      className="sc-cCcXHH lnQbVK"
    >
      <div
        className="sc-gWXbKe"
      >
        00:50
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Title Default 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="sc-cidDSM ejKUPx"
  >
    <h1
      className="sc-jcFjpl hHtJmW"
    >
      TEST
    </h1>
    <hr />
  </div>
</div>
`;

exports[`Storyshots ToggleButton Default 1`] = `
<button
  className="sc-iwjdpV sc-llYSUQ jidcoG ghFAOA"
  onClick={[Function]}
>
  ...
</button>
`;

exports[`Storyshots ToggleButton Primary 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <button
    className="sc-iwjdpV sc-cxpSdN jidcoG eocVup"
    onClick={[Function]}
  >
    <img
      alt=""
      data-image="tomato"
      src="tomato_small_color.svg"
    />
    <img
      alt=""
      data-image="arrow"
      src="arrow.svg"
    />
  </button>
</div>
`;

exports[`Storyshots TomatoButton Active 1`] = `
<button
  className="sc-giYglK bFZePS"
/>
`;

exports[`Storyshots TomatoButton Default 1`] = `
<button
  className="sc-giYglK ljthfC"
/>
`;

exports[`Storyshots TomatoButtonGroup Default 1`] = `
<div
  className="sc-ezbkAF kGzYjU"
  onClick={[Function]}
>
  <button
    className="sc-giYglK ljthfC"
    data-number={1}
  />
  <button
    className="sc-giYglK ljthfC"
    data-number={2}
  />
  <button
    className="sc-giYglK ljthfC"
    data-number={3}
  />
  <button
    className="sc-giYglK ljthfC"
    data-number={4}
  />
  <button
    className="sc-giYglK ljthfC"
    data-number={5}
  />
  <button
    className="sc-giYglK ljthfC"
    data-number={6}
  />
  <button
    className="sc-giYglK ljthfC"
    data-number={7}
  />
  <button
    className="sc-giYglK ljthfC"
    data-number={8}
  />
  <button
    className="sc-giYglK ljthfC"
    data-number={9}
  />
  <button
    className="sc-giYglK ljthfC"
    data-number={10}
  />
</div>
`;

exports[`Storyshots TomatoButtonGroup Default Selected Number 1`] = `
<div
  className="sc-ezbkAF kGzYjU"
  onClick={[Function]}
>
  <button
    className="sc-giYglK bFZePS"
    data-number={1}
  />
  <button
    className="sc-giYglK bFZePS"
    data-number={2}
  />
  <button
    className="sc-giYglK bFZePS"
    data-number={3}
  />
  <button
    className="sc-giYglK ljthfC"
    data-number={4}
  />
  <button
    className="sc-giYglK ljthfC"
    data-number={5}
  />
  <button
    className="sc-giYglK ljthfC"
    data-number={6}
  />
  <button
    className="sc-giYglK ljthfC"
    data-number={7}
  />
  <button
    className="sc-giYglK ljthfC"
    data-number={8}
  />
  <button
    className="sc-giYglK ljthfC"
    data-number={9}
  />
  <button
    className="sc-giYglK ljthfC"
    data-number={10}
  />
</div>
`;
